--- a/index.html
+++ b/index.html
@@ -55,6 +55,65 @@
                 </div>
             </nav>
         </nav>
+        <!-- banner -->
+        <section class="container">
+            <div class="row">
+                <div class="col">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner rounded-2">
+                            <div class="carousel-item active">
+                                <img src="images/cover/cover-1.png" class="img d-block w-100" alt="...">
+                                <div
+                                    class="d-flex h-50 justify-content-center align-item-center carousel-caption d-none d-md-block ">
+                                    <h1>Slider 1</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum assumenda ipsum
+                                        id consequatur, eaque similique excepturi reiciendis praesentium rerum ab.</p>
+                                    <button class="btn text-white btn-lg btn-info ">Get Started</button>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/cover/cover-2.png" class="img d-block w-100" alt="...">
+                                <div
+                                    class="d-flex h-50 justify-content-center align-item-center carousel-caption d-none d-md-block">
+                                    <h1>Slider 2</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit a nobis illo!
+                                        Tenetur ratione inventore doloribus minus maiores suscipit iure!</p>
+                                    <button class="btn text-white btn-lg btn-info">Get Started</button>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/cover/cover-3.png" class="img d-block w-100" alt="...">
+                                <div
+                                    class="d-flex h-50 justify-content-center align-item-center carousel-caption d-none d-md-block">
+                                    <h1>slider 3</h1>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos facere assumenda id
+                                        vero tempora sed dolore, perferendis dolores quisquam ab.</p>
+                                    <button class="btn text-white btn-lg btn-info">Get Started</button>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </header>
 
 
