fixed banner text

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                                 <img src="images/cover/cover-1.png" class="img d-block w-100" alt="...">
                                 <div
                                     class="d-flex h-50 justify-content-center align-item-center carousel-caption d-none d-md-block ">
-                                    <h1 class="fw-bold">Slider 1</h1>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum assumenda ipsum
-                                        id consequatur, eaque similique excepturi reiciendis praesentium rerum ab.</p>
+                                    <h1 class="fw-semibold fs-1">Become A<br>Web Developer</h1>
+                                    <p>Learn javascript online and supercharge your web design with this Javascript for
+                                        beginners training course.</p>
                                     <button class="btn text-white btn-lg btn-info ">Get Started</button>
                                 </div>
                             </div>
@@ -84,9 +84,9 @@
                                 <img src="images/cover/cover-2.png" class="img d-block w-100" alt="...">
                                 <div
                                     class="d-flex h-50 justify-content-center align-item-center carousel-caption d-none d-md-block">
-                                    <h1 class="fw-bold">Slider 2</h1>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit a nobis illo!
-                                        Tenetur ratione inventore doloribus minus maiores suscipit iure!</p>
+                                    <h1 class="fw-semibold fs-1">Earn Trust Through<br>Your Effort</h1>
+                                    <p>Learn HTML5, CSS3, JavaScript, Python, Wagtail CMS, PHP & MySQL from scratch and
+                                        become pro!</p>
                                     <button class="btn text-white btn-lg btn-info">Get Started</button>
                                 </div>
                             </div>
@@ -94,9 +94,9 @@
                                 <img src="images/cover/cover-3.png" class="img d-block w-100" alt="...">
                                 <div
                                     class="d-flex h-50 justify-content-center align-item-center carousel-caption d-none d-md-block">
-                                    <h1 class="fw-bold">slider 3</h1>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos facere assumenda id
-                                        vero tempora sed dolore, perferendis dolores quisquam ab.</p>
+                                    <h1 class="fw-semibold fs-1">Follow The Path<br>To Reach Success</h1>
+                                    <p>Complete coverage of HTML, CSS, Javascript while you Earn Four Respected
+                                        Certifications through us.</p>
                                     <button class="btn text-white btn-lg btn-info">Get Started</button>
                                 </div>
                             </div>
