Question and feedback done

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <!-- courses  -->
     <main>
         <div class="text-center">
-            <h1 class="fw-bold fs-1">Discover and Find<br>Our Popular Courses</h1>
+            <h1 class="fw-semibold fs-1">Discover and Find<br>Our Popular Courses</h1>
             <p>Let us introduce you to the world of best courses for your bright future</p>
         </div>
         <section class="container">
@@ -264,28 +264,17 @@
                         developer jobs.
                     </p>
 
-                    <h5 class="fw-bold mb-2">Practice</h5>
-                    <p class="text-grey">
-                        You will learn the latest technologies, including Javascript, React, Node and even Web3
-                        development..
-                    </p>
-
-                    <h5 class="fw-bold mb-2">Apply</h5>
-                    <p class="text-grey">
-                        You will master both front and back-end development, becoming a full-stack developer by the end
-                        of the course and start applying.
-                    </p>
                     <div class="course-statics mt-5 d-flex justify-content-between">
                         <div>
-                            <h2 class="fw-bold mb-0 fs-1">500+</h2>
+                            <h2 class="fw-semibold mb-0 fs-1">500+</h2>
                             <p class="text-grey fs-5">Online Course</p>
                         </div>
                         <div>
-                            <h2 class="fw-bold mb-0 fs-1">200+</h2>
+                            <h2 class="fw-semibold mb-0 fs-1">200+</h2>
                             <p class="text-grey fs-5">Teachers </p>
                         </div>
                         <div>
-                            <h2 class="fw-bold mb-0 fs-1">1200+</h2>
+                            <h2 class="fw-semibold mb-0 fs-1">1200+</h2>
                             <p class="text-grey fs-5">Reviews</p>
                         </div>
                     </div>
@@ -293,6 +282,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- register  -->
         <section class="container p-5 my-5 bg-info">
             <div class="row align-items-center">
                 <div class="col-md-6">
@@ -342,7 +333,7 @@
         <section class="container py-6">
             <div class="row">
                 <div class="col-md-5">
-                    <h2 class="fw-bold fs-1">Meet Our Successful Students</h2>
+                    <h2 class="fw-semibold fs-1">Meet Our Successful Students</h2>
                     <p class="text-grey">Here are the successful students that has gone through our cources</p>
                 </div>
             </div>
@@ -351,7 +342,7 @@
                     <div class="student border rounded">
                         <img src="images/student/student-4.png" class="img-fluid" alt="">
                         <div class="student-info p-3">
-                            <h5 class="fw-bold mb-2">Moniara Farhin</h5>
+                            <h5 class="fw-semibold mb-2">Moniara Farhin</h5>
                             <p class="text-grey">
                                 JAVA Developer
                             </p>
@@ -362,7 +353,7 @@
                     <div class="student border rounded">
                         <img src="images/student/student-2.png" class="img-fluid" alt="">
                         <div class="student-info p-3">
-                            <h5 class="fw-bold mb-2">Sarah Nazim</h5>
+                            <h5 class="fw-semibold mb-2">Sarah Nazim</h5>
                             <p class="text-grey">
                                 MERN Stack Developer
                             </p>
@@ -420,13 +411,13 @@
                             <div class="review">
                                 <i class=" text-warning fa fa-star"></i><i class=" text-warning fa fa-star"></i><i
                                     class=" text-warning fa fa-star"></i><i class=" text-warning fa fa-star"></i><i
-                                    class=" text-warning fa fa-star-half"></i>
+                                    class=" text-warning fa fa-star"></i>
                             </div>
                         </div>
 
                         <p class="text-grey mt-3">
-                            For me it all came down to the fact that by the end of the course... I didn't know how to
-                            build a website... I understood every single lesson, I completed every single exercise
+                            For me it all came down to the fact that by the end of the course.I didn't know how to
+                            build a website.I understood every single lesson, I completed every single exercise
                             successfully, but the big fault in this course is that it doesn't explicitly explain how to
                             connect front-end and back-end while using React.
                         </p>
@@ -469,6 +460,97 @@
                                 <p class="text-grey mb-0">
                                     React Developer
                                 </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Questions -->
+        <section class="container py-5">
+            <div class="row">
+                <div class="col-lg-6 offset-lg-3 col-md-10 offset-md-1 text-md-center">
+                    <h2 class="fw-bold">
+                        Frequently Asked Questions
+                    </h2>
+                    <p class="text-grey">
+                        Here are come commonly asked question that you might need to know.
+                    </p>
+                </div>
+            </div>
+            <div class="row pt-4">
+                <div class="col-md-8 offset-md-2">
+                    <div class="accordion mb-3" id="according1">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="grid-flexbox-difference">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    What are the difference between grid and flex box?
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show"
+                                aria-labelledby="grid-flexbox-difference" data-bs-parent="#according1">
+                                <div class="accordion-body">
+                                    <strong>Dimensions define the primary demarcation between Flexbox and CSS Grid.
+                                        Flexbox was designed specifically for one-dimensional layouts, while CSS Grid is
+                                        engineered to enable two-dimensional layouts. Therefore, CSS Grid can easily
+                                        render rows and columns simultaneously.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion mb-3" id="according2">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="grid-flexbox-difference">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                                    what are the difference between Bootstrap and Tailwind?
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse"
+                                aria-labelledby="grid-flexbox-difference" data-bs-parent="#according2">
+                                <div class="accordion-body">
+                                    Bootstrap comes with a set of pre-styled responsive, mobile-first components that
+                                    possess a definite UI kit. Tailwind CSS uses a set of utility classes to create a
+                                    neat UI with more flexibility and uniqueness. Sites created using Bootstrap follow
+                                    the generic pattern that makes them look identical.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion mb-3" id="according3">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="grid-flexbox-difference">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+                                    What is CSS box model?
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse"
+                                aria-labelledby="grid-flexbox-difference" data-bs-parent="#according3">
+                                <div class="accordion-body">
+                                    In CSS, the term "box model" is used when talking about design and layout. The CSS
+                                    box model is essentially a box that wraps around every HTML element. It consists of:
+                                    margins, borders, padding, and the actual content.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion" id="according4">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="grid-flexbox-difference">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+                                    What is semantic tag?
+                                </button>
+                            </h2>
+                            <div id="collapseFour" class="accordion-collapse collapse"
+                                aria-labelledby="grid-flexbox-difference" data-bs-parent="#according4">
+                                <div class="accordion-body">
+                                    The HTML semantics refers to the tags that provide meaning to an HTML page rather
+                                    than just presentation. It makes HTML more comprehensible by better defining the
+                                    different sections and layout of web pages.
+                                </div>
                             </div>
                         </div>
                     </div>
