--- a/index.html
+++ b/index.html
@@ -558,6 +558,23 @@
             </div>
         </section>
 
+        <!-- Companies -->
+
+        <section class="d-none d-lg-block py-5">
+            <div class="container">
+                <h1 class="fw-semibold fs-1 text-center">Trusted by over 800+ companies</h1><br>
+                <div class="d-flex justify-content-between align-items-center py-7">
+                    <div><img src="images/company/company-1.png" alt=""></div>
+                    <div><img src="images/company/company-2.png" alt=""></div>
+                    <div><img src="images/company/company-3.png" alt=""></div>
+                    <div><img src="images/company/company-4.png" alt=""></div>
+                    <div><img src="images/company/company-5.png" alt=""></div>
+                    <div><img src="images/company/company-6.png" alt=""></div>
+                </div>
+            </div>
+        </section>
+        </section>
+
     </main>
 
 
