--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Courses</a>
+                                <a class="nav-link active" aria-current="page" href="#courses">Courses</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Detals</a>
+                                <a class="nav-link active" aria-current="page" href="#deals">Deals</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Success</a>
+                                <a class="nav-link active" aria-current="page" href="#success">Success</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">About</a>
+                                <a class="nav-link active" aria-current="page" href="#about">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Register</a>
+                                <a class="nav-link active" aria-current="page" href="#register">Register</a>
                             </li>
                         </ul>
                         <div class="d-flex">
@@ -120,8 +120,8 @@
 
     <!-- courses  -->
     <main>
-        <div class="text-center">
-            <h1 class="fw-semibold fs-1">Discover and Find<br>Our Popular Courses</h1>
+        <div class="text-center " id="courses">
+            <h1 class="fw-semibold fs-1">Discover & Find<br>Our Popular Courses</h1>
             <p>Let us introduce you to the world of best courses for your bright future</p>
         </div>
         <section class="container">
@@ -246,7 +246,7 @@
         <br><br>
 
         <!-- Text with Image  -->
-        <section class="container py-5">
+        <section class="container py-5" id="deals">
             <div class="row g-0">
                 <div class="col-md-6">
                     <img src="images/working.png" class="img-fluid" alt="">
@@ -284,7 +284,7 @@
         </section>
 
         <!-- register  -->
-        <section class="container p-5 my-5 bg-info">
+        <section class="container p-5 my-5 bg-info" id="register">
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <h2 class="fw-bold text-light fs-1">Ready to Enroll?</h2>
@@ -327,10 +327,10 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section><br><br>
 
         <!-- student -->
-        <section class="container py-6">
+        <section class="container py-6" id="success">
             <div class="row">
                 <div class="col-md-5">
                     <h2 class="fw-semibold fs-1">Meet Our Successful Students</h2>
@@ -576,6 +576,29 @@
         </section>
 
     </main>
+    <!-- footer -->
+    <footer class="text-center text-light bg-dark py-5" id="about">
+        <div class="container">
+            <div class="col">
+                <h2 class="fw-normal">
+                    Hi-Tech Edu
+                </h2>
+                <p class="mb-2 fw-normal">
+                    Office 41, Zawaya Buildin, Ghala Muscat, <br>
+                    Sultanate of Oman
+                </p>
+                <a href="" class="text-decoration-none text-light me-3 fw-normal"> Privacy Ploicy</a> | <a href=""
+                    class="text-decoration-none text-light ms-3 fw-normal"> Terms of use</a>
+                <div class="social-icons text-center mt-3">
+                    <a href=""><i class="px-3 text-light fa fa-facebook"></i></a>
+                    <a href=""><i class="px-3 text-light fa fa-twitter"></i></a>
+                    <a href=""><i class="px-3 text-light fa-brands fa-pinterest"></i></a>
+                    <a href=""><i class="px-3 text-light fa-brands fa-linkedin"></i></a>
+                </div>
+
+            </div>
+        </div>
+    </footer>
 
 
 
