responsive tab done

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="collapse navbar-collapse" id="navbarContent">
                         <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page" href="#home">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#courses">Courses</a>
@@ -57,7 +57,7 @@
         </nav>
 
         <!-- banner -->
-        <section class="container">
+        <section class="container" id="home">
             <div class="row">
                 <div class="col">
                     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -73,7 +73,7 @@
                             <div class="carousel-item active">
                                 <img src="images/cover/cover-1.png" class="img d-block w-100" alt="...">
                                 <div
-                                    class="d-flex h-50 justify-content-center align-item-center carousel-caption d-none d-md-block ">
+                                    class="d-flex h-50 justify-content-center align-item-center carousel-caption d-none d-md-block  ">
                                     <h1 class="fw-semibold fs-1">Become A<br>Web Developer</h1>
                                     <p>Learn javascript online and supercharge your web design with this Javascript for
                                         beginners training course.</p>
@@ -122,7 +122,9 @@
     <main>
         <div class="text-center " id="courses">
             <h1 class="fw-semibold fs-1">Discover & Find<br>Our Popular Courses</h1>
-            <p>Let us introduce you to the world of best courses for your bright future</p>
+            <p>Let us introduce you to the world of best courses for your bright future.<br>Learn and become successful
+                in
+                you own way.</p>
         </div>
         <section class="container">
             <div class="row justify-content-center align-items-center p-3 gap-3">
@@ -264,7 +266,7 @@
                         developer jobs.
                     </p>
 
-                    <div class="course-statics mt-5 d-flex justify-content-between">
+                    <div class="course-statics mt-5 d-flex justify-content-between ">
                         <div>
                             <h2 class="fw-semibold mb-0 fs-1">500+</h2>
                             <p class="text-grey fs-5">Online Course</p>
@@ -332,13 +334,13 @@
         <!-- student -->
         <section class="container py-6" id="success">
             <div class="row">
-                <div class="col-md-5">
-                    <h2 class="fw-semibold fs-1">Meet Our Successful Students</h2>
+                <div class="col-md-12 col-md-5">
+                    <h2 class="fw-semibold fs-1">Meet Our Successful<br>Students</h2>
                     <p class="text-grey">Here are the successful students that has gone through our cources</p>
                 </div>
             </div>
             <div class="row pt-4">
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3">
                     <div class="student border rounded">
                         <img src="images/student/student-4.png" class="img-fluid" alt="">
                         <div class="student-info p-3">
@@ -349,7 +351,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3">
                     <div class="student border rounded">
                         <img src="images/student/student-2.png" class="img-fluid" alt="">
                         <div class="student-info p-3">
@@ -360,7 +362,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3">
                     <div class="student border rounded">
                         <img src="images/student/student-3.png" class="img-fluid" alt="">
                         <div class="student-info p-3">
@@ -371,7 +373,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3">
                     <div class="student border rounded">
                         <img src="images/student/student-1.png" class="img-fluid" alt="">
                         <div class="student-info p-3">
@@ -404,7 +406,7 @@
                 </div>
             </div>
             <div class="row pt-4">
-                <div class="col-md-6">
+                <div class="col-md-12 col-lg-6">
                     <div class="testimonail p-4 border rounded">
                         <div class="quote-and-review d-flex justify-content-between">
                             <img src="images/comma.png" alt="">
@@ -434,7 +436,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-12 col-lg-6">
                     <div class="testimonail p-4 border rounded">
                         <div class="quote-and-review d-flex justify-content-between">
                             <img src="images/comma.png" alt="">
