--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <section class="container" id="home">
             <div class="row">
                 <div class="col">
-                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                                 class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -71,11 +71,12 @@
                         </div>
                         <div class="carousel-inner rounded-2">
                             <div class="carousel-item active">
-                                <img src="images/cover/cover-1.png" class="img d-block w-100" alt="...">
+                                <img src="images/cover/cover-1.png" class="img d-block w-100 " alt="...">
                                 <div
-                                    class="d-flex h-50 justify-content-center align-item-center carousel-caption d-none d-md-block  ">
+                                    class="d-flex flex flex-column h-100 justify-content-center align-items-center carousel-caption   ">
                                     <h1 class="fw-semibold fs-1">Become A<br>Web Developer</h1>
-                                    <p>Learn javascript online and supercharge your web design with this Javascript for
+                                    <p>Learn javascript online and supercharge your web design with<br>this Javascript
+                                        for
                                         beginners training course.</p>
                                     <button class="btn text-white btn-lg btn-info ">Get Started</button>
                                 </div>
@@ -83,9 +84,10 @@
                             <div class="carousel-item">
                                 <img src="images/cover/cover-2.png" class="img d-block w-100" alt="...">
                                 <div
-                                    class="d-flex h-50 justify-content-center align-item-center carousel-caption d-none d-md-block">
+                                    class="d-flex flex flex-column h-100 justify-content-center align-items-center carousel-caption">
                                     <h1 class="fw-semibold fs-1">Earn Trust Through<br>Your Effort</h1>
-                                    <p>Learn HTML5, CSS3, JavaScript, Python, Wagtail CMS, PHP & MySQL from scratch and
+                                    <p>Learn HTML5, CSS3, JavaScript, Python, Wagtail CMS,<br>PHP & MySQL from scratch
+                                        and
                                         become pro!</p>
                                     <button class="btn text-white btn-lg btn-info">Get Started</button>
                                 </div>
@@ -93,9 +95,9 @@
                             <div class="carousel-item">
                                 <img src="images/cover/cover-3.png" class="img d-block w-100" alt="...">
                                 <div
-                                    class="d-flex h-50 justify-content-center align-item-center carousel-caption d-none d-md-block">
+                                    class="d-flex flex flex-column h-100 justify-content-center align-items-center carousel-caption">
                                     <h1 class="fw-semibold fs-1">Follow The Path<br>To Reach Success</h1>
-                                    <p>Complete coverage of HTML, CSS, Javascript while you Earn Four Respected
+                                    <p>Complete coverage of HTML, CSS, Javascript while you Earn<br>Four Respected
                                         Certifications through us.</p>
                                     <button class="btn text-white btn-lg btn-info">Get Started</button>
                                 </div>
